[gd_scene load_steps=9 format=3 uid="uid://do22pgehsrpvi"]

[ext_resource type="Script" path="res://Spider.gd" id="1_prfvu"]
[ext_resource type="PackedScene" path="res://spider.tscn" id="2_m3upr"]
[ext_resource type="AudioStream" uid="uid://yww5dewpo13e" path="res://Music/spiderhit1.mp3" id="3_cajcf"]
[ext_resource type="AudioStream" uid="uid://c7ioyi1e8fxds" path="res://Music/spider death sound.mp3" id="4_d6xcq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6ls2h"]
radius = 10.198

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1g6bv"]
radius = 18.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5s02t"]
radius = 14.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lmqnu"]
radius = 84.0
height = 168.0

[node name="Spider" type="CharacterBody2D"]
script = ExtResource("1_prfvu")

[node name="Spider-Skeleton" parent="." instance=ExtResource("2_m3upr")]
position = Vector2(-46, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-56, 6)
shape = SubResource("CircleShape2D_6ls2h")

[node name="hitBox2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox2"]
position = Vector2(-56, 8)
shape = SubResource("CapsuleShape2D_1g6bv")

[node name="hurtsoundspider" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cajcf")

[node name="deathsoundspider" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_d6xcq")

[node name="hurttimer3" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="deathTimer3" type="Timer" parent="."]

[node name="hurtArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtArea"]
position = Vector2(-56, 8)
shape = SubResource("CapsuleShape2D_5s02t")

[node name="detectionarea1" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionarea1"]
position = Vector2(-56, 8)
shape = SubResource("CapsuleShape2D_lmqnu")

[connection signal="area_entered" from="hurtArea" to="." method="_on_hurt_area_area_entered"]
[connection signal="body_entered" from="detectionarea1" to="." method="_on_detectionarea_1_body_entered"]
[connection signal="body_exited" from="detectionarea1" to="." method="_on_detectionarea_1_body_exited"]
